# gemini-quota-manager

./: .env.template  .gitignore  README.md  Taskfile.yml  gemini_quota_manager.py  pyproject.toml
docs/: SPEC.md
scripts/: enable-gcp-apis.sh
tests/: test_gemini_quota_manager.py
